# ctxseg

./: .gitignore  README.md  pyproject.toml
.github/: copilot-instructions.md
ctxseg/modeling/: convnext.py  ctxseg.py  diffusion.py
ctxseg/ops/: __init__.py  ndimage.py
ctxseg/sampling/: samplers.py
ctxseg/segmentation/: flow.py  metrics.py  utils.py
ctxseg/training/: precondition.py  utils.py
ctxseg/utils/: plotting.py
scripts/: eval.ipynb  eval.py  inference.py
